# agentor

./: .gitignore  CLAUDE.md  agentor.toml  pyproject.toml
.github/workflows/: ci.yml
agentor/: auto_accept.py  capabilities.py  checkpoint.py  cli.py  committer.py  config.py  daemon.py  dashboard.py  envelope.py  extract.py  fold.py  git_ops.py  grep_hook.py  models.py  providers.py  read_hook.py  recovery.py  resume_primer.py  runner.py  slug.py  store.py  transcript.py  watcher.py
agentor/dashboard/: __init__.py  formatters.py  modes.py  render.py  transcript.py
docs/: IMPROVEMENTS.md
docs/agent-logs/: 2026-04-17-audit-enum-drift-merge.md  (+103 more)
examples/: agentor.toml  backlog.md
tests/: test_auto_accept.py  test_capabilities.py  test_checkpoint.py  test_command_placeholders.py  test_committer.py  test_committer_delete.py  test_config.py  test_daemon.py  test_dashboard_enter.py  test_dashboard_formatters.py  test_dashboard_inspect_dispatch.py  test_dashboard_inspect_narrow.py  test_dashboard_model_switcher.py  test_dashboard_prompt.py  test_dashboard_provider_switcher.py  test_dashboard_render.py  test_dashboard_resize.py  test_dashboard_review_cycle.py  test_enum_exhaustiveness.py  test_envelope.py  test_extract.py  test_fold.py  test_grep_hook.py  test_provider_parsers.py  test_providers.py  test_read_hook.py  test_recovery.py  test_resume_primer.py  test_runner.py  test_store.py  test_transcript.py  test_transcript_tail.py  test_watcher.py
tools/: analyze_transcripts.py  analyze_waste.py  replay_checkpoints.py  shadow_verify_grep_hook.py
(+91 files in other folders)
