[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentor"
version = "0.1.0"
description = "Agent work orchestrator"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agentor = "agentor.cli:main"

[tool.setuptools.packages.find]
include = ["agentor*"]
