[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentor"
version = "0.1.0"
description = "Agent work orchestrator"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agentor = "agentor.cli:main"

[tool.setuptools.packages.find]
include = ["agentor*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
